--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==0.8.10
+appdirs==1.4.0
 coverage==4.0.3
 decorator==4.0.11
 Flask==0.10.1
@@ -19,6 +20,7 @@ nltk==3.2.2
 packaging==16.8
 pbr==1.10.0
 phonenumbers==7.2.7
+psycopg2==2.7.1
 pyparsing==2.1.10
 python-editor==1.0.3
 pytz==2016.10
@@ -28,7 +30,9 @@ sqlalchemy-migrate==0.10.0
 sqlparse==0.2.2
 Tempita==0.5.2
 textblob==0.12.0
+traceback2==1.4.0
 twilio==5.3.0
+unittest2==1.1.0
 Werkzeug==0.11.15
 WTForms==2.1
-
+xmlunittest==0.3.2
