--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
 alembic==0.8.10
+cachetools==2.0.0
 coverage==4.0.3
 decorator==4.0.11
 Flask==0.10.1
+Flask-BasicAuth==0.2.0
 Flask-Login==0.4.0
 Flask-Migrate==1.7.0
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.14.2
+google-api-python-client==1.6.2
+google-auth==0.10.0
+google-auth-httplib2==0.0.2
+google-cloud-core==0.24.0
+google-cloud-translate==0.24.0
+googleapis-common-protos==1.5.2
 gunicorn==19.7.1
 httplib2==0.10.3
 itsdangerous==0.24
@@ -16,13 +24,18 @@ lxml==3.4.0
 Mako==1.0.6
 MarkupSafe==0.23
 nltk==3.2.2
+oauth2client==4.0.0
 packaging==16.8
 pbr==1.10.0
 phonenumbers==7.2.7
+protobuf==3.2.0
 psycopg2==2.7.1
+pyasn1==0.2.3
+pyasn1-modules==0.0.8
 pyparsing==2.1.10
 python-editor==1.0.3
 pytz==2016.10
+rsa==3.4.2
 six==1.10.0
 SQLAlchemy==1.0.11
 sqlalchemy-migrate==0.10.0
@@ -31,6 +44,8 @@ Tempita==0.5.2
 textblob==0.12.0
 traceback2==1.4.0
 twilio==5.3.0
+unittest2==1.1.0
+uritemplate==3.0.0
 Werkzeug==0.11.15
 WTForms==2.1
-
+xmlunittest==0.3.2
