--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==0.8.10
+appdirs==1.4.0
 cachetools==2.0.0
 coverage==4.0.3
 decorator==4.0.11
@@ -6,6 +7,7 @@ Flask==0.10.1
 Flask-BasicAuth==0.2.0
 Flask-Login==0.4.0
 Flask-Migrate==1.7.0
+Flask-Moment==0.5.1
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.14.2
